--- a/spc-03-dependency-injection/pom.xml
+++ b/spc-03-dependency-injection/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jdc.online</groupId>
-	<artifactId>spc-02-spring-beans</artifactId>
+	<artifactId>spc-03-dependency-injection</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
 
 	<dependencies>
 		<dependency>
@@ -14,19 +13,17 @@
 			<artifactId>spring-context</artifactId>
 			<version>6.1.11</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>6.1.11</version>
-		</dependency>
-
-
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>5.10.3</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
 		</dependency>
 	</dependencies>
 
@@ -42,11 +39,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 	<modules>
-		<module>pj01-beans-xml</module>
-		<module>pj02-beans-annotations</module>
-		<module>pj03-beans-java</module>
-		<module>pj04-bean-names-and-aliases</module>
-		<module>pj05-bean-scopes</module>
+		<module>pj01-di-xml</module>
+		<module>pj02-di-java</module>
+		<module>pj03-autowired-xml</module>
+		<module>pj04-autowired-annotation</module>
 	</modules>
 </project>
